<resources>
    <string name="app_name">Riddle Me This</string>

    <string name="start">Start</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="type_your_answer_here">Type your answer here</string>

    <string name="answer1">Answer 1</string>
    <string name="answer2">Answer 2</string>
    <string name="answer3">Answer 3</string>
    <string name="answer4">Answer 4</string>

    <string name="false_">False</string>
    <string name="true_">True</string>
    <string name="title_activity_settings">SettingsActivity</string>


    <string name="music">Music</string>
    <string name="level">Level :</string>
    <string name="score">Score :</string>

    <string name="great_job">Great Job</string>
    <string name="wrong_answer">Wrong Answer</string>

    <string name="okay">Okay</string>

    <string name="skip_this_riddle">Skip This Riddle</string>

    <string name="notification">Notification</string>
    <string name="background_music">background music</string>

    <string name="daily_notification_reminder">daily notification reminder</string>

    <string name="reset">Reset</string>

    <string name="user">User</string>

    <string name="user_info">User Info</string>

    <string name="user_inspector">User Inspector</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="birth_date">Birth Date</string>
    <string name="gender">Gender</string>
    <string name="country">Country</string>
    <string name="are_you_sure_you_want_to_reset">Are you sure you want to reset</string>
    <string name="submit">confirm</string>

    <string name="time_out">Time Out</string>

    <string name="timer">Timer</string>
    <string name="standing_on">Standing On</string>
    <string name="riddles_count">Riddles Count</string>
    <string name="to_be_decided">to be decided</string>
    <string name="riddles_answered_count">Riddles Answered Count</string>
    <string name="riddles_answered_right">Riddles Answered Right</string>
    <string name="riddles_answered_wrong">Riddles Answered Wrong</string>
    <string name="level_solved_count">Level Solved Count</string>

</resources>